--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cn">
 <head>
     <meta charset="UTF-8">
+    <meta name="author" content="乌瑟尔">
+    <meta name="keywords" content="乌瑟尔,世界">
+    <meta name="description" content="乌瑟尔,世界">
     <title>乌瑟尔的世界</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.6.0/katex.min.css">
 </head>
 <body>
