--- a/404.html
+++ b/404.html
@@ -2,12 +2,13 @@
 <html lang="zh-cn">
 <head>
     <meta charset="UTF-8">
-    <meta name="author" content="乌瑟尔">
-    <meta name="keywords" content="乌瑟尔,世界">
-    <meta name="description" content="乌瑟尔,世界">
-    <title>乌瑟尔的世界</title>
+    <meta name="author" content="雨林工业">
+    <meta name="keywords" content="雨林工业,Rainfore,Craft">
+    <meta name="description" content="雨林工业,Rainfore,Craft">
+    <title>雨林工业 | Rainfore's Craft</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.css">
+    <link rel="stylesheet" href="/public/bundle.css">
 </head>
 <body>
     <div id="app"><router-view></router-view></div>
