--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="zh-cn">
 <head>
     <meta charset="UTF-8">
-    <meta name="author" content="雨林工业">
-    <meta name="keywords" content="雨林工业,Rainfore,Craft">
-    <meta name="description" content="雨林工业,Rainfore,Craft">
-    <title>雨林工业 | Rainfore's Craft</title>
+    <meta name="author" content="雨业林森">
+    <meta name="keywords" content="雨业林森,Rainfore,Craft">
+    <meta name="description" content="雨业林森,Rainfore,Craft">
+    <title>雨业林森 | Rainfore's Craft</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.css">
     <link rel="stylesheet" href="/public/bundle.css">
